Commande WS finished
