# commande/app/Http/Swagger/schemas/models/CommandeModel.php
@@ -1,0 +1,24 @@
+<?php
+
+/**
+ *
+ * @OA\Schema(
+ *     schema="CommandeModel",
+ *     @OA\Property(
+ *         property="name",
+ *         type="string",
+ *     ),
+ *     @OA\Property(
+ *         property="description",
+ *         type="string",
+ *     ),
+ *     @OA\Property(
+ *         property="product_id",
+ *         type="integer",
+ *     ),
+ *     @OA\Property(
+ *         property="quantity",
+ *         type="integer",
+ *     ),
+ * )
+ */
