# commande/storage/api-docs/api-docs.json
@@ -1,8 +1,8 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Clients API docs",
-        "description": "This is Clients API documentation",
+        "title": "Commandes API docs",
+        "description": "This is Commandes API documentation",
         "contact": {
             "email": "yassine.mechiche@gmail.com"
         },
@@ -14,25 +14,25 @@
     },
     "servers": [
         {
-            "url": "http://localhost/microservices/clients/public"
+            "url": "http://localhost/microservices/commande/public"
         }
     ],
     "paths": {
-        "/api/clients": {
+        "/api/commandes": {
             "get": {
                 "tags": [
-                    "Clients"
+                    "Commandes"
                 ],
-                "summary": "Get list of clients",
-                "description": "Get list of clients",
-                "operationId": "listClients",
+                "summary": "Get list of commandes",
+                "description": "Get list of commandes",
+                "operationId": "listCommandes",
                 "responses": {
                     "200": {
                         "description": "Successful operation",
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/listClientResponse"
+                                    "$ref": "#/components/schemas/listCommandeResponse"
                                 }
                             }
                         }
@@ -71,13 +71,13 @@
             },
             "post": {
                 "tags": [
-                    "Clients"
+                    "Commandes"
                 ],
-                "summary": "Add a client",
-                "description": "Add a client",
-                "operationId": "AddClient",
+                "summary": "Add a commande",
+                "description": "Add a commande",
+                "operationId": "AddCommande",
                 "requestBody": {
-                    "description": "Add a client",
+                    "description": "Add a commande",
                     "required": true,
                     "content": {
                         "application/json": {
@@ -158,19 +158,19 @@
                 }
             }
         },
-        "/api/clients/{id}": {
+        "/api/commandes/{id}": {
             "get": {
                 "tags": [
-                    "Clients"
+                    "Commandes"
                 ],
-                "summary": "Get client details",
-                "description": "Get client details",
-                "operationId": "clientDetail",
+                "summary": "Get commande details",
+                "description": "Get commande details",
+                "operationId": "commandeDetail",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "Client id",
+                        "description": "Commande id",
                         "required": true
                     }
                 ],
@@ -180,7 +180,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/detailClientResponse"
+                                    "$ref": "#/components/schemas/detailCommandeResponse"
                                 }
                             }
                         }
@@ -219,21 +219,21 @@
             },
             "put": {
                 "tags": [
-                    "Clients"
+                    "Commandes"
                 ],
-                "summary": "Update a client",
-                "description": "Update a client",
-                "operationId": "UpdateClient",
+                "summary": "Update a commande",
+                "description": "Update a commande",
+                "operationId": "UpdateCommande",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "Client id",
+                        "description": "Commande id",
                         "required": true
                     }
                 ],
                 "requestBody": {
-                    "description": "Update a client",
+                    "description": "Update a commande",
                     "required": true,
                     "content": {
                         "application/json": {
@@ -315,16 +315,16 @@
             },
             "delete": {
                 "tags": [
-                    "Clients"
+                    "Commandes"
                 ],
-                "summary": "Delete a client",
-                "description": "Delete a client",
+                "summary": "Delete a commande",
+                "description": "Delete a commande",
                 "operationId": "deleteUser",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "Client id",
+                        "description": "Commande id",
                         "required": true
                     }
                 ],
@@ -493,7 +493,7 @@
                 },
                 "type": "object"
             },
-            "detailClientResponse": {
+            "detailCommandeResponse": {
                 "required": [
                     "base_url",
                     "status",
@@ -515,12 +515,12 @@
                         "type": "string"
                     },
                     "data": {
-                        "$ref": "#/components/schemas/ClientModel"
+                        "$ref": "#/components/schemas/CommandeModel"
                     }
                 },
                 "type": "object"
             },
-            "listClientResponse": {
+            "listCommandeResponse": {
                 "required": [
                     "base_url",
                     "status",
@@ -544,32 +544,25 @@
                     "data": {
                         "type": "array",
                         "items": {
-                            "$ref": "#/components/schemas/ClientModel"
+                            "$ref": "#/components/schemas/CommandeModel"
                         }
                     }
                 },
                 "type": "object"
             },
-            "ClientModel": {
+            "CommandeModel": {
                 "properties": {
-                    "first_name": {
+                    "name": {
                         "type": "string"
                     },
-                    "last_name": {
+                    "description": {
                         "type": "string"
                     },
-                    "email": {
-                        "type": "string",
-                        "format": "email"
+                    "product_id": {
+                        "type": "integer"
                     },
-                    "login": {
-                        "type": "string"
-                    },
-                    "password": {
-                        "type": "string"
-                    },
-                    "phone": {
-                        "type": "string"
+                    "quantity": {
+                        "type": "integer"
                     }
                 },
                 "type": "object"
@@ -578,8 +571,8 @@
     },
     "tags": [
         {
-            "name": "Clients",
-            "description": "Clients routes"
+            "name": "Commandes",
+            "description": "Commandes routes"
         }
     ],
     "security": [
